CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4n2
-------------
* Fixed a bug with Anusol-crafting
* Fixed a bug that would lock you in the toy masturbation menu. Menu is now unavailable if no valid toy is present
* Fixed a bunch of typos

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4n
------------
* Bugfixing
* Added masturbation options for the PC
 - Cock. Written by LukaDoc. Patreon-sponsored
 - Breasts. Written by The Observer
 - Pussy. Written by The Observer
 - Ass. Written by The Observer
* Some more scenes for cats
 - Win, get serviced. Requires cock. Written by LukaDoc. Patreon-sponsored
 - Win, get vaginally fucked. Written by LukaDoc. Patreon-sponsored
 - Loss, PC blows cocked cat. Written by LukaDoc. Patreon-sponsored
* Fixed a bug with the Green Scented Candle. It actually does something now
* Added a new Halloween scene, written by QB and LD, featuring a certain doberherm. Find it in the new room in the Mausoleum
* The scenes to acquire Anusol can now be accessed. Talk to Rosalin once you've convinced the game that you really like anal
* The scene to acquire Anusol+ can now be accessed. Bring a vial of Anusol to Jeanne
* Pregnancies now take much longer time than earlier to come to term. ~20-30 days is "normal"

Version 0.4m2
-------------
* Fixed a parser bug in spring description
* Fixed a bug in the new Lei scene where the PC would duplicate
* Fixed a bunch of bugs reported on the forums
* Added Lord Harthon to the Halloween event. Written by LD and QB. Find him in the Mausoleum (and later on the Path)
* You can no longer equip bottom armors after you've equipped a full armor (remove it first)

Version 0.4m
------------
* Fixed a bug in Halloween which would cause your party to duplicate