@@ -260,7 +260,6 @@ Entity.prototype.FuckOral = function(mouth, cock, expMult) {
 // Fuck entitys anus (anus, cock)
 Entity.prototype.FuckAnal = function(butt, cock, expMult) {
 	var parse = {
-		poss   : this.Possessive(),
 		name   : this.NameDesc(),
 		has    : this.has(),
 		hisher : this.hisher()
@@ -275,27 +274,8 @@ Entity.prototype.FuckAnal = function(butt, cock, expMult) {
 	else
 		this.AddSexExp(expMult);
 	
-	// TODO: Stretch
 	if(cock) {
-		var stretch = butt.Tightness();
-		var thk = cock.Thickness();
-		var cap = butt.Cap();
-		var ratio = thk / cap;
-		if(ratio < 0.5)
-			butt.stretch.IncreaseStat(Orifice.Tightness.flexible, 0.25);
-		else if(ratio < 1)
-			butt.stretch.IncreaseStat(Orifice.Tightness.loose, 0.5);
-		else
-			butt.stretch.IncreaseStat(Orifice.Tightness.gaping, 0.75);
-		var stretch2 = butt.Tightness();
-		if(stretch < Orifice.Tightness.flexible && stretch2 >= Orifice.Tightness.flexible) {
-			Text.Add("<b>[poss] butt has become loose.</b>", parse);
-			Text.NL();
-		}
-		if(stretch < Orifice.Tightness.loose && stretch2 >= Orifice.Tightness.loose) {
-			Text.Add("<b>[poss] butt has become gaping.</b>", parse);
-			Text.NL();
-		}
+		butt.StretchOrifice(this, cock, false);
 	}
 	Text.Flush();
 }
@@ -303,7 +283,6 @@ Entity.prototype.FuckAnal = function(butt, cock, expMult) {
 // Fuck entitys vagina (vag, cock)
 Entity.prototype.FuckVag = function(vag, cock, expMult) {
 	var parse = {
-		poss   : this.Possessive(),
 		name   : this.NameDesc(),
 		has    : this.has(),
 		hisher : this.hisher()
@@ -318,27 +297,8 @@ Entity.prototype.FuckVag = function(vag, cock, expMult) {
 	else
 		this.AddSexExp(expMult);
 	
-	// TODO: Stretch
 	if(cock) {
-		var stretch = vag.Tightness();
-		var thk = cock.Thickness();
-		var cap = vag.Cap();
-		var ratio = thk / cap;
-		if(ratio < 0.5)
-			vag.stretch.IncreaseStat(Orifice.Tightness.flexible, 0.25);
-		else if(ratio < 1)
-			vag.stretch.IncreaseStat(Orifice.Tightness.loose, 0.5);
-		else
-			vag.stretch.IncreaseStat(Orifice.Tightness.gaping, 0.75);
-		var stretch2 = vag.Tightness();
-		if(stretch < Orifice.Tightness.flexible && stretch2 >= Orifice.Tightness.flexible) {
-			Text.Add("<b>[poss] pussy has become loose.</b>", parse);
-			Text.NL();
-		}
-		if(stretch < Orifice.Tightness.loose && stretch2 >= Orifice.Tightness.loose) {
-			Text.Add("<b>[poss] pussy has become gaping.</b>", parse);
-			Text.NL();
-		}
+		vag.StretchOrifice(this, cock, false);
 	}
 	Text.Flush();
 }
