@@ -10,6 +10,7 @@ Version 0.4n2
 * Fixed a bug with Anusol-crafting
 * Fixed a bug that would lock you in the toy masturbation menu. Menu is now unavailable if no valid toy is present
 * Fixed a bunch of typos
+* Masturbating with toys now increases your stretch the same way that being fucked would. This means you can gradually build up to taking larger insertions
 
 --------------------------------------------
              PREVIOUS VERSIONS
